--- a/src/app/agency-detail/agency-detail.component.html
+++ b/src/app/agency-detail/agency-detail.component.html
@@ -35,7 +35,7 @@
 <section>
     <div class="mapouter">
         <div class="gmap_canvas">
-            <iframe width="400" height="451" id="gmap_canvas" src={{generateMap(this.agencies[this.id].lon.toString(),this.agencies[this.id].lat.toString())}} frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+            <iframe width="400" height="451" id="gmap_canvas" [src]="generateMap(this.agencies[this.id].lon.toString(),this.agencies[this.id].lat.toString()) | safePipe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
             <a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:451px;width:400px;}</style><a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas {padding-top:20px;overflow:hidden;background:none!important;height:451px;width:400px;}</style>
         </div>
     </div>
